--- a/VuThanhDuong_DA/Views/User/RegisterModal.cshtml
+++ b/VuThanhDuong_DA/Views/User/RegisterModal.cshtml
@@ -12,11 +12,59 @@
                             <div class="col-12">
                                 <div class="form-group">
                                     <label>Tên đăng nhập</label>
-                                    <input name="user_username" class="form-control" type="text" />
+                                    <input id="user_username" name="user_username" class="form-control" type="text" />
+                                    <p id="validUsername" class="text-danger" style="font-size: 14px">Vui lòng nhập tên đăng nhập</p>
                                 </div>
                                 <div class="form-group">
                                     <label>Mật khẩu</label>
-                                    <input name="user_password" class="form-control" type="password" />
+                                    <input id="user_password" name="user_password" class="form-control" type="password" />
+                                    <p id="validPassword" class="text-danger" style="font-size: 14px">Vui lòng nhập mật khẩu</p>
+                                </div>
+                                <div class="form-group">
+                                    <label>Nhập lại mật khẩu</label>
+                                    <input id="user_repassword" name="user_repassword" class="form-control" type="password" />
+                                    <p id="validRepassword" class="text-danger" style="font-size: 14px">Vui lòng nhập lại mật khẩu</p>
+                                </div>
+                                <div class="form-group">
+                                    <label>Giới tính</label>
+                                    <br />
+                                    <div class="container-fluid">
+                                        <div class="row">
+                                            <div class="col-4 text-center">
+                                                <input id="gender1" name="user_gender" type="radio" value="Nam" />
+                                                <label class="form-check-label">Nam</label>
+                                            </div>
+                                            <div class="col-4 text-center">
+                                                <input id="gender2" name="user_gender" type="radio" value="Nữ" />
+                                                <label class="form-check-label">Nữ</label>
+                                            </div>
+                                            <div class="col-4 text-center">
+                                                <input id="gender3" name="user_gender" type="radio" value="Khác" />
+                                                <label class="form-check-label">Khác</label>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <p id="validGender" class="text-danger" style="font-size: 14px" >Vui lòng chọn giới tính</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label>Email</label>
+                                    <input id="user_email" name="user_email" class="form-control" type="email" />
+                                    <p id="validEmail" class="text-danger" style="font-size: 14px">Vui lòng nhập Email</p>
+                                </div>
+                                <div class="form-group">
+                                    <label>Số điện thoại</label>
+                                    <input id="user_phonenumber" name="user_phonenumber" class="form-control" type="tel" />
+                                    <p id="validPhone" class="text-danger" style="font-size: 14px">Vui lòng nhập số điện thoại</p>
+                                </div>
+                                <div class="form-group">
+                                    <label>Tên</label>
+                                    <input id="user_firstname" name="user_firstname" class="form-control" type="text" />
+                                    <p id="validFirst" class="text-danger" style="font-size: 14px">Vui lòng nhập tên</p>
+                                    <label>Họ và tên đệm</label>
+                                    <input id="user_lastname" name="user_lastname" class="form-control" type="text" />
+                                    <p id="validLast" class="text-danger" style="font-size: 14px">Vui lòng nhập họ và tên đệm</p>
                                 </div>
                             </div>
                         </div>
@@ -30,3 +78,4 @@
         </div>
     </div>
 </div>
+
