fix incorrect html component's id

--- a/VuThanhDuong_DA/Views/User/RegisterModal.cshtml
+++ b/VuThanhDuong_DA/Views/User/RegisterModal.cshtml
@@ -38,11 +38,11 @@
                                                 <label class="form-check-label">Nam</label>
                                             </div>
                                             <div class="col-4 text-center">
-                                                @Html.RadioButtonFor(m => m.user_gender, "Nam", new { id = "gender1", name = "gender" })
+                                                @Html.RadioButtonFor(m => m.user_gender, "Nữ", new { id = "gender2", name = "gender" })
                                                 <label class="form-check-label">Nữ</label>
                                             </div>
                                             <div class="col-4 text-center">
-                                                @Html.RadioButtonFor(m => m.user_gender, "Nam", new { id = "gender1", name = "gender" })
+                                                @Html.RadioButtonFor(m => m.user_gender, "Khác", new { id = "gender3", name = "gender" })
                                                 <label class="form-check-label">Khác</label>
                                             </div>
                                         </div>
