--- a/VuThanhDuong_DA/Views/Product/Details.cshtml
+++ b/VuThanhDuong_DA/Views/Product/Details.cshtml
@@ -12,14 +12,17 @@
         <div class="row">
             <div class="col-1 p-0">
                 <ul id="imagelist" class="nav flex-column">
-                    @{ 
+                    @{
+                        <li class="nav-item mt-1">
+                            <img id="@Model.product_thumbnail_image" class="img-thumbnail m-0" src="~/Images/@Model.product_thumbnail_image" onclick="imgClick(@Model.product_thumbnail_image)" style=" cursor: pointer; height: 75px" />
+                        </li>
                         if (ViewBag.images != null)
                         {
                             List<product_image> im = ViewBag.images as List<product_image>;
                             foreach(var i in im)
                             {
                                 <li class="nav-item mt-1">
-                                    <img id="@i.product_image_file_name" class="img-fluid m-0" src="~/Images/@i.product_image_file_name"/>
+                                    <img id="@i.product_image_id" class="img-thumbnail m-0" src="~/Images/@i.product_image_file_name" onclick="imgClick(@i.product_image_id)" style=" cursor: pointer; height: 75px"/>
                                 </li>
                             }
                         }
@@ -30,7 +33,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-12">
-                            <img id="imagecurrent" class="img-fluid" src="~/Images/@Model.product_thumbnail_image" style="width: 100%; height: 100%"/>
+                            <img id="imagecurrent" class="img-thumbnail" src="~/Images/@Model.product_thumbnail_image" style="width: 100%; height: 350px;"/>
                         </div>
                     </div>
                 </div>
@@ -63,7 +66,7 @@
                             @{
                                 if (Model.product_inventory > 0)
                                 {
-                                    <a class="btn-lg btn-warning" href="#">ĐẶT HÀNG NGAY</a>
+                                    <a class="btn-lg btn-warning" href="#">THÊM VÀO GIỎ HÀNG</a>
                                 }
                                 else
                                 {
@@ -77,4 +80,9 @@
         </div>
     </div>
 }
-
+<script>
+    function imgClick(string) {
+        var m = document.getElementById("imagecurrent");
+        m.src = document.getElementById(string).src;
+    }
+</script>
