--- a/VuThanhDuong_DA/Views/Cart/Index.cshtml
+++ b/VuThanhDuong_DA/Views/Cart/Index.cshtml
@@ -1,46 +1,88 @@
-﻿@model IEnumerable<VuThanhDuong_DA.Models.InCartProduct>
+﻿@using VuThanhDuong_DA.Models;
+@model IEnumerable<VuThanhDuong_DA.Models.InCartProduct>
 
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutPage.cshtml";
 }
-<table>
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Price)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Discount)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Amount)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Price)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Discount)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Amount)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+@if (Model != null)
+{
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-1">
+            </div>
+            <div class="col-10">
+                <div class="container-fluid">
+                    <div class="row">
+                        <table class="table">
+                            <thead>
+                                <tr class="text-center">
+                                    <td colspan="7" class="text-center">
+                                        <h5>DANH SÁCH SẢN PHẨM TRONG GIỎ HÀNG</h5>
+                                    </td>
+                                    
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr class="text-center align-middle">
+                                    <td>
+                                        Mã sản phẩm
+                                    </td>
+                                    <td>
+                                        Tên sản phẩm
+                                    </td>
+                                    <td>
+                                        Hình ảnh minh họa
+                                    </td>
+                                    <td>
+                                        Giá sản phẩm
+                                    </td>
+                                    <td>
+                                        Giảm giá
+                                    </td>
+                                    <td>
+                                        Số lượng đặt
+                                    </td>
+                                    <td>
+                                        Thành tiền
+                                    </td>
+                                </tr>
+                                @{ 
+                                    foreach (InCartProduct icp in Model)
+                                    {
+                                        <tr class="text-center">
+                                            <td>
+                                                @icp.Id
+                                            </td>
+                                            <td>
+                                                @icp.Name
+                                            </td>
+                                            <td>
+                                                <img style="width: 180px; height: 120px" src="~/Images/@icp.ImgFileName"/>
+                                            </td>
+                                            <td>
+                                                @icp.Price
+                                            </td>
+                                            <td>
+                                                @icp.Discount
+                                            </td>
+                                            <td>
+                                                @icp.Amount
+                                            </td>
+                                            <td>
+                                                @((icp.Price - icp.Discount) * icp.Amount)
+                                            </td>
+                                        </tr>
+                                    }
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="col-1">
+            </div>
+        </div>
+    </div>
 }
-
-</table>
