--- a/VuThanhDuong_DA/Views/Admin/Sidebar.cshtml
+++ b/VuThanhDuong_DA/Views/Admin/Sidebar.cshtml
@@ -35,7 +35,7 @@
                     <a href="#">Thêm mới danh mục</a>
                 </li>
                 <li class="list-group-item">
-                    <a href="#">Danh sách danh mục</a>
+                    <a href="~/Admin/CategoryList">Danh sách danh mục</a>
                 </li>
             </ul>
         </li>
