--- a/VuThanhDuong_DA/Views/Product/Details.cshtml
+++ b/VuThanhDuong_DA/Views/Product/Details.cshtml
@@ -14,7 +14,7 @@
                 <ul id="imagelist" class="nav flex-column">
                     @{
                         <li class="nav-item mt-1">
-                            <img id="@Model.product_thumbnail_image" class="img-thumbnail m-0" src="~/Images/@Model.product_thumbnail_image" onclick="imgClick(@Model.product_thumbnail_image)" style=" cursor: pointer; height: 75px" />
+                            <img id="00" class="img-thumbnail m-0" src="~/Images/@Model.product_thumbnail_image" onclick="imgClick('00')" style=" cursor: pointer; height: 75px" />
                         </li>
                         if (ViewBag.images != null)
                         {
