--- a/VuThanhDuong_DA/Views/User/RegisterModal.cshtml
+++ b/VuThanhDuong_DA/Views/User/RegisterModal.cshtml
@@ -15,17 +15,17 @@
                             <div class="col-12">
                                 <div class="form-group">
                                     <label>Tên đăng nhập</label>
-                                    <input id="user_username" name="user_username" class="form-control" type="text" required/>
+                                    <input id="user_username" name="user_username" class="form-control" type="text" required minlength="8"/>
                                     <p id="validUsername" class="text-danger" style="font-size: 14px">Vui lòng nhập tên đăng nhập</p>
                                 </div>
                                 <div class="form-group">
                                     <label>Mật khẩu</label>
-                                    <input id="user_password" name="user_password" class="form-control" type="password" required/>
+                                    <input id="user_password" name="user_password" class="form-control" type="password" required minlength="8"/>
                                     <p id="validPassword" class="text-danger" style="font-size: 14px">Vui lòng nhập mật khẩu</p>
                                 </div>
                                 <div class="form-group">
                                     <label>Nhập lại mật khẩu</label>
-                                    <input id="user_repassword" name="user_repassword" class="form-control" type="password" required/>
+                                    <input id="user_repassword" name="user_repassword" class="form-control" type="password" required minlength="8"/>
                                     <p id="validRepassword" class="text-danger" style="font-size: 14px">Vui lòng nhập lại mật khẩu</p>
                                 </div>
                                 <div class="form-group">
@@ -58,7 +58,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label>Số điện thoại</label>
-                                    <input id="user_phonenumber" name="user_phonenumber" class="form-control" type="tel" required/>
+                                    <input id="user_phonenumber" name="user_phonenumber" class="form-control" type="tel" required minlength="10"/>
                                     <p id="validPhone" class="text-danger" style="font-size: 14px">Vui lòng nhập số điện thoại</p>
                                 </div>
                                 <div class="form-group">
