--- a/VuThanhDuong_DA/Views/Shared/_LayoutPage.cshtml
+++ b/VuThanhDuong_DA/Views/Shared/_LayoutPage.cshtml
@@ -111,7 +111,7 @@
                         <div class="container-fluid">
                             <form class="d-flex" method="post" action="~/Product/Search">
                                 <input name="searchtx" class="form-control mr-2" placeholder="Tìm kiếm sản phẩm" type="text" />
-                                <input class="btn btn-outline-dark" type="submit" value="Search" />
+                                <button class="btn btn-outline-dark" type="submit"><i class="fa-solid fa-magnifying-glass"></i> Search</button>
                             </form>
                         </div>
                     </li>
@@ -119,10 +119,10 @@
             </div>
         </div>
         <div class="row bg-light border-top border-bottom p-2">
-            <div class="col-6">
+            <div class="col-3">
 
             </div>
-            <div class="col-6 text-right font-weight-bold">
+            <div class="col-9 text-right font-weight-bold">
                 @{
 
                     if (Session["currentUser"] != null)
@@ -130,15 +130,16 @@
                         user_account user = Session["currentUser"] as user_account;
                         <p class="font-weight-normal m-0 d-inline">Xin chào, @user.user_lastname @user.user_firstname</p>
                         <p class="font-weight-normal m-0 mr-2 d-inline">| Điểm tích lũy: @user.user_point</p>
-                        <a class="btn btn-outline-warning" style="width: 105px" href="#!">Đơn hàng</a>
-                        <a class="btn btn-outline-info" style="width: 105px" href="~/Cart/Index"><i class="fa-solid fa-cart-shopping"></i> Giỏ hàng</a>
-                        <button class="btn btn-outline-primary" style="width: 105px">Cài đặt</button>
-                        <button class="btn btn-outline-danger" style="width: 105px" type="button" data-toggle="modal" data-target="#logOutModal">Đăng xuất</button>
+                        <a class="btn btn-outline-warning" style="width: 115px" href="#!"><i class="fa-solid fa-barcode"></i> Đơn hàng</a>
+                        <a class="btn btn-outline-info" style="width: 115px" href="~/Cart/Index"><i class="fa-solid fa-cart-shopping"></i> Giỏ hàng</a>
+                        <button class="btn btn-outline-primary" style="width: 115px"><i class="fa-solid fa-user"></i> Hồ sơ</button>
+                        <button class="btn btn-outline-danger" style="width: 115px" type="button" data-toggle="modal" data-target="#logOutModal"><i class="fa-solid fa-right-from-bracket"></i> Đăng xuất</button>
                     }
                     else
                     {
-                        <button class="btn btn-outline-dark" type="button" style="width: 105px" data-toggle="modal" data-target="#userLoginModal">Đăng nhập</button>
-                        <button class="btn btn-outline-dark" type="button" style="width: 105px" data-toggle="modal" data-target="#userRegisterModal">Đăng ký</button>
+                        <a class="btn btn-outline-info" style="width: 115px" href="~/Cart/Index"><i class="fa-solid fa-cart-shopping"></i> Giỏ hàng</a>
+                        <button class="btn btn-outline-dark" type="button" style="width: 115px" data-toggle="modal" data-target="#userLoginModal">Đăng nhập</button>
+                        <button class="btn btn-outline-dark" type="button" style="width: 115px" data-toggle="modal" data-target="#userRegisterModal">Đăng ký</button>
                     }
                 }
             </div>
