--- a/VuThanhDuong_DA/Views/Shared/Admin_LayoutPage.cshtml
+++ b/VuThanhDuong_DA/Views/Shared/Admin_LayoutPage.cshtml
@@ -40,7 +40,7 @@
                 {
                     admin_account current = Session["admin"] as admin_account;
                     <p class="d-inline">Quản trị viên: @current.admin_username</p>
-                    <a class="btn btn-outline-danger m-1" href="#">Đăng xuất</a>
+                    <a class="btn btn-outline-danger m-1" href="~/Admin/Logout">Đăng xuất</a>
                 }
             </div>
         </div>
